<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#2360DC"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/bt0"
            android:layout_width="28dp"
            android:layout_height="24dp"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/back_arrow"
            android:backgroundTint="@color/header_blue"
            android:text="Home" />
        <TextView
            android:id="@+id/groupChatTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Group Chat"
            android:textSize="32sp"
            android:textColor="@color/header_blue"
            android:fontFamily="@font/roboto"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"/>
        <TextView
            android:textColor="@color/button_blue"
            android:id="@+id/howManyOnlineTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/groupChatTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="0 online">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintStart_toStartOf="parent">
        <ListView
            android:id="@+id/chatList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:drawable/bottom_bar"
        android:backgroundTint="@color/header_blue"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="33dp">

        <EditText
            android:id="@+id/et2"
            style="@android:style/Widget.EditText"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:background="@drawable/send_message"
            android:hint="Send something..."
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/bt2"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/send_button"
            tools:ignore="LabelFor"
            android:foregroundTint="#2360DC" />

    </LinearLayout>
<!--android:background="@android:drawable/ic_menu_send"-->

</androidx.constraintlayout.widget.ConstraintLayout>