<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header_blue">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="52dp"
        android:hint="Password:"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingLeft="15dp"
        android:background="@drawable/send_message"
        android:backgroundTint="@color/medium_blue"
        android:inputType="text|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/logInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="389dp"
        android:layout_height="104dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="11dp"
        android:fontFamily="@font/roboto"
        android:text="Login"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="35dp"
        android:hint="Username:"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:textColor="@color/white"
        android:paddingLeft="15dp"
        android:background="@drawable/send_message"
        android:backgroundTint="@color/medium_blue"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="139dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="46dp"
        android:text="Sign-Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="10dp"
        android:textColor="#B31A1A"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <Button
        android:id="@+id/quickLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="292dp"
        android:layout_marginBottom="40dp"
        android:text="Quick Login"
        app:layout_constraintBottom_toTopOf="@+id/loginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>