...
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="75dp"
           android:orientation="horizontal">
           <Button
               android:id="@+id/btnFilter"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_marginStart="25dp"
               android:layout_marginTop="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="20dp"
...
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="20dp"
               android:backgroundTint="@color/button_blue"
               android:paddingHorizontal="5dp"
               android:text="Save" />
           <Button
               android:id="@+id/btnNewQuestion"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_marginStart="20dp"
               android:layout_marginTop="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="20dp"
...
