...

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:id="@+id/greeting"
                   android:paddingHorizontal="20dp"
                   android:paddingVertical="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:fontFamily="@font/roboto"
                   android:text="Welcome back, "
                   android:textColor="@color/header_blue"
                   android:textAlignment="center"
                   android:textSize="24sp" />
               <ImageButton
                   android:id="@+id/profilePicture"
                   android:layout_width="100sp"
                   android:layout_height="100sp"
                   android:contentDescription="profilePicture"
                   android:scaleType="fitCenter"
                   android:src="@drawable/profilepicturesample" />
           </LinearLayout>
...
